# telegpick-backend

./: .dockerignore  .gitignore  .gitlab-ci.yml  Makefile  alembic.ini  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: github-ci.yml
app/: main.py
app/apps/: routes.py
app/apps/telegpick/: dtos.py  models.py  tasks.py  use_cases.py
app/apps/telegpick/api/v1/: api.py
app/apps/telegpick/connectors/: telegram.py
app/apps/users/: dependencies.py  dtos.py  models.py  use_cases.py
app/apps/users/api/v1/: api.py
app/core/: celery_app.py  config.py  db_config.py  init_app.py  init_db.py  logging_conf.py  pydantic_base.py
app/core/models/: __init__.py  base.py
app/lib/: classes.py  utils.py
app/migrations/: env.py
app/migrations/versions/: 91d1eebd532b_initial_migrations.py
db/: init-user-db.sh  userlist.txt
docker/: Dockerfile  gunicorn_conf.py  start.sh
tests/: conftest.py  test_core.py  test_lib.py
tests/telegpick/: test_api.py  test_tasks.py  test_use_cases.py
tests/users/: test_api.py  test_models.py  test_use_cases.py
